Modify buffer